# MadMaxErniHackathon2023

./: .gitignore  README.md  launchServices.sh  stopServices.sh
CommunicationModule/: CommunicationModule.py  CommunicationModuleFail.py  incomingHelperTest.py  outcomingHelperTest.py
MadMaxWeb/: .firebaserc  README.md  angular.json  firebase.json  package-lock.json  package.json
MadMaxWeb/.firebase/: hosting.ZGlzdFxtYWQtbWF4LXdlYg.cache
MadMaxWeb/src/: index.html
MadMaxWeb/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
MadMaxWeb/src/app/control/: control.component.html  control.component.ts  control.service.ts
MadMaxWeb/src/app/errors/: errors.component.html
MadMaxWeb/src/app/shared/: communication.service.ts
RobotServices/: CMakeLists.txt  collisionService.py  collisionServiceTest.py  distanceSensor.cpp  moveService.py  progressService.py  progressServiceTest.py  speedServiceTest.py  startApplication.sh
RobotServices/component/: LineSensor.cpp  LineSensor.hpp  LineSensorController.cpp  LineSensorController.hpp  RobotControl.cpp  RobotControl.hpp  madmaxRobot  main.cpp
RobotServices/component/sensorLine/: sensorClient.py  sensorLine.py  sensorLine2.py
RobotServices/component/sensorLine/robot_hat/: adc.py  modules.py
RobotServices/cppServices/: main.cpp
RobotServices/cppServices/base/: pin.hpp
RobotServices/cppServices/component/: LineSensor.cpp  PidController.cpp  PidController.hpp  UltrasonicSensor.cpp  UltrasonicSensor.hpp  motor.hpp
RobotServices/cppServices/component/sensorLine/: sensorRead.py
(+13 files in other folders)
